--- a/Assets/CSS/Tablette.css
+++ b/Assets/CSS/Tablette.css
@@ -16,9 +16,8 @@
     flex-direction: column-reverse; 
 }
 .bloc1{
-    
     margin-bottom: 10px;
 }
 .heberg{
-    margin: 5px;
+    margin-right: 10px;
 }
