--- a/Assets/CSS/Pc.css
+++ b/Assets/CSS/Pc.css
@@ -24,33 +24,29 @@ header{
 #logo{
     width: 100px;
 	height: auto;
-    margin-top: 50px;
+    padding-top: 50px;
 }
 nav{
     display: flex;
     align-items: center;
-    font-size: 1.1em;
 }
 nav ul{
     display: flex;
     list-style: none;
 }
-nav ul li{
-    margin-top: 50px;
-    padding-right: 30px;
-}
-header a{
+nav li a{
+    margin: 50px 30px 0px 0px;
     color: #0065FC;
-    text-decoration:none;      
+    text-decoration:none; 
 }
 #inscri{
-    margin-top: 50px;
+    color: #0065FC;
+    text-decoration:none;
     font-weight: bold;
 }
-
 #heberg{
     border-top: 2px solid #0065fc;
-    padding-top: 48px;
+    padding-top: 39px;
 }
 #act{
     color: black;
@@ -75,6 +71,8 @@ form{
     border-bottom-left-radius: 15px;
 }
 #txt{
+    height: 50px;
+    font-family: "Raleway", sans-serif;
     padding: 10px;
     border: 1px solid #F2F2F2;
     font-size: 1.1em;
@@ -174,7 +172,7 @@ form{
 #hebergement{
     display: flex;
     flex-wrap: wrap;
-    width: 840px;
+    min-width: 840px;
 }
 .heberg{
     width: 245px;
