--- a/Assets/CSS/Mobile.css
+++ b/Assets/CSS/Mobile.css
@@ -1,22 +1,28 @@
 @media screen and (max-width:768px){
     
         /* Partie de l'entête Logo+Nav*/
-   
+    header{
+        flex-direction: column-reverse;
+    }
+    /*
     nav{
-        flex-wrap: wrap-reverse;
-        flex-direction: column;
-        
+        flex-direction: column-reverse;
+        align-items: unset;
     }    
-
+    nav ul{
+        width: 100%;
+    }
     nav li a{
+        margin: 50px 30px 0px 30px;
         border-bottom: 3px solid #f2f2f2;
         padding-bottom: 15px;
     }
-    #inscri{
-        position: absolute;
+    #heberg{
+        border-top: unset;
+        padding-top: 0;
     }
-
         /* Partie du premier article de la premiere section ( BARRE DE RECHERCHE )*/
+
     #search{
         display: none;
     }
@@ -26,7 +32,6 @@
         font-size: 1.1em;
         background-color: #0065FC;
         color: white;
-        border: 1px solid #0065FC;
         border-top-right-radius: 15px;
         border-bottom-right-radius: 15px;
     }
