--- a/Assets/CSS/Pc.css
+++ b/Assets/CSS/Pc.css
@@ -12,14 +12,14 @@ header, section {
 .gris{
     color: #F2F2F2;
 }
-
+ul{
+    list-style: none;
+}
 /* Partie de l'entête Logo+Nav*/
 
 header{
     display: flex;
-    width: auto;
     justify-content: space-between;
-    flex-wrap: wrap;
 }
 #logo{
     width: 100px;
@@ -32,7 +32,6 @@ nav{
 }
 nav ul{
     display: flex;
-    list-style: none;
 }
 nav li a{
     margin: 50px 30px 0px 0px;
@@ -102,7 +101,6 @@ form{
 #filtre{
     display: flex;
     font-weight: bold;
-    list-style: none;
     font-size: 1.1em;
 }
 #filtre li{
@@ -153,9 +151,6 @@ form{
     display: flex;
     margin: 40px;
 }
-.liste{
-    list-style: none;
-}
 .marseille{
     margin-right: 40px;
     background-color: #F2F2F2;
@@ -172,7 +167,7 @@ form{
 #hebergement{
     display: flex;
     flex-wrap: wrap;
-    min-width: 840px;
+    width: 840px;
 }
 .heberg{
     width: 245px;
@@ -238,9 +233,25 @@ form{
     font-size: 1.4em;
 }
 
+    /* Partie Activités à Marseille */
 
-
-
+.active{
+    display: flex;
+    
+}
+.activ{
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    border: 20px;
+    
+}
+.activ img{
+    object-fit: cover;
+}
+.soutitre{
+    display: block;
+}
 
 
 
