--- a/Assets/CSS/Mobile.css
+++ b/Assets/CSS/Mobile.css
@@ -2,25 +2,35 @@
     
         /* Partie de l'entête Logo+Nav*/
     header{
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
-    /*
+    
     nav{
+        width: 100%;
         flex-direction: column-reverse;
         align-items: unset;
+        
     }    
     nav ul{
         width: 100%;
+        padding: 0;
     }
-    nav li a{
-        margin: 50px 30px 0px 30px;
+    nav li{
+        width: 100%;
+        text-align: center;
         border-bottom: 3px solid #f2f2f2;
         padding-bottom: 15px;
     }
     #heberg{
-        border-top: unset;
-        padding-top: 0;
+        border-top: none;
     }
+    #inscri{
+        position: absolute;
+        top: 35px;
+        right: 20px;
+        left: 95%;
+    }
+
         /* Partie du premier article de la premiere section ( BARRE DE RECHERCHE )*/
 
     #search{
@@ -38,8 +48,8 @@
 
         /* Partie du deuxieme article de la premiere section ( PARTIE FILTRES ) */
 
-    #filtr{
-        flex-direction: column;
+    #filtre{
+        flex-wrap: wrap;
     }
 
         /* Partie Hebergement et les plus populaire*/
