--- a/Assets/CSS/Pc.css
+++ b/Assets/CSS/Pc.css
@@ -3,6 +3,8 @@ body{
     margin: 0;
 }
 header, section {
+    font-family: 'Raleway', Arial, sans-serif;
+    width: auto;
     margin-left: 50px;
     margin-right: 50px;
 }
@@ -20,11 +22,12 @@ ul{
 header{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 #logo{
     width: 100px;
 	height: auto;
-    padding-top: 50px;
+    padding-top: 30px;
 }
 nav{
     display: flex;
@@ -149,71 +152,99 @@ form{
 
 .section1{
     display: flex;
-    margin: 40px;
 }
 .marseille{
-    margin-right: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: #F2F2F2;
+    height: auto;
+    margin-right: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     border-radius: 20px;
 }
 .popu{
-    margin-right: 40px;
+    height: auto;
     background-color: #F2F2F2;
     border-radius: 20px;
+    padding-right: 30px;
 }
 .titremar{
     padding: 25px 0px 0px 40px;
 }
 #hebergement{
     display: flex;
+    justify-content: space-around;
+    justify-items: center;
     flex-wrap: wrap;
-    width: 840px;
+    margin: 20px;
+}
+#populaire{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    justify-items: center;
+    width: 90%;
 }
 .heberg{
-    width: 245px;
-    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: white;
-    margin-right: 30px;
-    margin-bottom: 30px;
+    height: auto;
+    width: 30%;
+    box-shadow: 5px 5px 5px 1px grey;
+    padding: 5px;
+    padding-bottom: 15px;
     border-radius: 20px;
+    margin-bottom: 40px;
+    
 }
 .imgheberg{
-    width: 235px; 
-    height: 114px;
+    width: 100%;
+    height: 120px;
     object-fit: cover;
-    border: 5px solid white;
-    border-bottom: 1px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
 .txtheber{
+    width: 90%;
     padding-left: 15px;
-    line-height: 6px;
     font-size: 0.8em;
 }
+h3{
+    font-weight: bold;
+    font-size: 15px;
+}
+p{
+    font-size: 15px;
+    margin-bottom: 20px;
+}
 .affplus {
-    padding: 20px 0px 20px 40px;
-    font-weight: bolder;
     text-decoration: none;
     color: black;
+    font-weight: bold;
+    line-height: 40px;
+    padding-left: 25px;
 }
 .etoile{
     display: flex;
 }
 .pop{
     display: flex;
-    width: 345px;
-    height: 144px;
     background-color: white;
-    margin-right: 40px;
-    margin-bottom: 34px;
+    height: auto;
+    width: 90%;
+    box-shadow: 5px 5px 5px 1px grey;
+    border: 5px solid white;
+    margin-bottom: 35px;
     border-radius: 20px;
 }
 .imgpop{
-    width: 127px; 
-    height: 134px;
+    width: 40%; 
+    height: 140px;
     object-fit: cover;
-    border: 5px solid white;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
 }
