--- a/Assets/CSS/Pc.css
+++ b/Assets/CSS/Pc.css
@@ -17,7 +17,7 @@ header, section {
 ul{
     list-style: none;
 }
-/* Partie de l'entête Logo+Nav*/
+    /* Partie de l'entête LOGO + NAV */
 
 header{
     display: flex;
@@ -54,7 +54,7 @@ nav li a{
     color: black;
 }
 
-/* Partie du premier article de la premiere section ( BARRE DE RECHERCHE )*/
+    /* Partie du premier article de la premiere section ( BARRE DE RECHERCHE )*/
 
 .section h1{
     font-size: 1.4em;
@@ -95,9 +95,9 @@ form{
     display: none;
 }
 
-/* Partie du deuxieme article de la premiere section ( PARTIE FILTRES ) */
+    /* Partie du deuxieme article de la premiere section ( PARTIE FILTRES ) */
 
-#filtr{
+.filtr{
     display: flex;
     align-items: center;
 }
@@ -108,7 +108,6 @@ form{
 }
 #filtre li{
     display: flex;
-    align-items: center;
     text-align: center;
     margin: 10px 10px 0px 10px;
     border-radius: 40px;
@@ -119,7 +118,7 @@ form{
     background-color: #DEEBFF;
 }
 
-#filtre li p{
+#filtre h3{
     margin-right: 30px;
 }
 #filtre li i{
@@ -148,7 +147,7 @@ form{
     border-radius: 15px;
 }
 
-/* Partie Hebergement et les plus populaire*/
+    /* PARTIE HEBERGEMENT ET LES PLUS POPULAIRES */
 
 .section1{
     display: flex;
@@ -160,15 +159,14 @@ form{
     background-color: #F2F2F2;
     height: auto;
     margin-right: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: auto;
     border-radius: 20px;
 }
 .popu{
     height: auto;
     background-color: #F2F2F2;
     border-radius: 20px;
-    padding-right: 30px;
+    
 }
 .titremar{
     padding: 25px 0px 0px 40px;
@@ -179,12 +177,15 @@ form{
     justify-items: center;
     flex-wrap: wrap;
     margin: 20px;
+    padding-left: 0px;
 }
 #populaire{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    justify-items: center;
+    align-items: center;
+    margin: auto;
+    padding-left: 0px;
     width: 90%;
 }
 .heberg{
@@ -205,8 +206,8 @@ form{
     width: 100%;
     height: 120px;
     object-fit: cover;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 .txtheber{
     width: 90%;
@@ -245,8 +246,8 @@ p{
     width: 40%; 
     height: 140px;
     object-fit: cover;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
 }
 .txtpop{
     padding-left: 15px;
@@ -264,7 +265,7 @@ p{
     font-size: 1.4em;
 }
 
-    /* Partie Activités à Marseille */
+    /* PARTIE ACTIVITES A MARSEILLE */
 
 .active{
     display: flex;
@@ -274,9 +275,8 @@ p{
     display: flex;
     flex-direction: column;
     height: 445px;
-    width: 300px;
+    width: 25%;
     margin-right: 40px;
-    
     border-radius: 20px;
 }
 .imgactiv{
@@ -288,8 +288,7 @@ p{
 }
 
 .imgactiv2{
-    
-    width: 300px;
+    width: 100%;
     object-fit: cover;
     box-shadow: 5px 5px 5px 1px #f2f2f2;
     border-top-right-radius: 20px;
