--- a/Assets/CSS/Tablette.css
+++ b/Assets/CSS/Tablette.css
@@ -1,19 +1,20 @@
-@media screen and (max-width:991px){
+@media screen and (max-width:1200px){
     
-/* Partie du deuxieme article de la premiere section ( PARTIE FILTRES ) */
+    /* Partie du deuxieme article de la premiere section ( PARTIE FILTRES ) */
 
-#filtre{
-    margin: 10px;
+#filtre{   
     flex-wrap: wrap;
 }
 #filtre li{
     margin-right: 10px;
+    
 }
-#filtre li p{
-    margin-right: 15px;
+#filtre h3{
+    position: absolute;
+    margin-top: 15px;
 }
 
-/* Partie Hebergement et les plus populaire*/
+    /* PARTIE HEBERGEMENT ET LES PLUS POPULAIRES */
 
 .section1{
     flex-direction: column-reverse;
@@ -22,27 +23,43 @@
     margin-right: 0;
 }
 .marseille{
-    width: 95%;
     background-color: white;
-    flex-wrap: wrap;
+    margin: auto;
+}
+.heberg{
+    box-shadow: 5px 5px 5px 1px #f2f2f2;
 }
 .popu{
     width: 100%;
+    box-shadow: 5px 5px 5px 1px #f2f2f2;
     margin-bottom: 40px;
     border-radius: 0;
 }
 #populaire{
-    flex-direction: row;
+    flex-direction: column;
+    margin: auto;
+    align-items: center;
+    padding-left: 0px;
     
 }
 .pop{
-   width: 30%;
+   width: 90%;
+   
 }
-.active{
-    flex-wrap: wrap;
 
+    /* PARTIE ACTIVITES A MARSEILLE */
+
+.active{
+    margin-right: 0px;
+    flex-wrap: wrap;
+    
 }
 .activ{
+    width: 40%;
+    margin: auto;
     margin-bottom: 40px;
 }
+
+
+
 }
