--- a/Assets/CSS/Pc.css
+++ b/Assets/CSS/Pc.css
@@ -319,7 +319,28 @@ p{
     border-bottom-left-radius: 20px;
 }
 
+ /* FOOTER */
 
+.baspage{
+    display: flex;
+    background-color: #f2f2f2;
+    margin-top: 40px;
+    padding-left: 45px;
+    padding-bottom: 30px;
+}
+.baspage div{
+    width: 30%;  
+}
+.titraide{
+    font-weight: bold;
+    font-size: 1.1em;
+}
+.aide{
+    display: block;
+    text-decoration: none;
+    color: black;
+    line-height: 30px;
+}
 
 
 
