--- a/Assets/CSS/Mobile.css
+++ b/Assets/CSS/Mobile.css
@@ -74,18 +74,15 @@ nav li{
     /* PARTIE HEBERGEMENT ET LES PLUS POPULAIRES */
 
 .heberg{
-    width: 100%;
-    height: 350px;
+    width: 95%;
     margin: auto;
     margin-bottom: 40px;
     border: 1px solid #f2f2f2;
 }
 .imgheberg{
-    height: 70%;
+    height: 350px;
 }
-.txtheber{
-    height: 30%;
-}
+
 #populaire{
     display: flex;
     flex-direction: column;
@@ -100,14 +97,24 @@ nav li{
 
 .activ{
     width: 95%;
-    margin: auto;
+    margin-bottom: 40px;
 }
-#imga2, #imga3, #imga5, #imga6,.imgactiv{
-    height: 80%;
+.imgactiv{
+    height: 350px;
 }
-.soutitre{
-    height: 20%;
-    
+#imga2{
+    height: 350px;
+}
+#imga3{
+    margin-top: 40px;
+    height: 350px;
+}
+#imga5{
+    height: 350px;
+}
+#imga6{
+    margin-top: 40px;
+    height: 350px;
 }
 
     /* FOOTER */
