--- a/Assets/CSS/tablette2.css
+++ b/Assets/CSS/tablette2.css
@@ -1,19 +1,64 @@
-@media screen and (max-width:1000px){
-
-/* Partie du deuxieme article de la premiere section ( PARTIE FILTRES ) */
+@media screen and (max-width:1070px){
 
 
 
 /* PARTIE HEBERGEMENT ET LES PLUS POPULAIRES */
 
+.section1{
+    flex-direction: column-reverse;
+    margin-bottom: 40px;
+    margin-left: 0;
+    margin-right: 0;
+}
 .marseille{
-    width: 95%;
+    background-color: white;
+    
+    width: 100%;
     flex-wrap: wrap;
 }
+
+    /* PARTIE HEBERGEMENT */
+
+#hebergement{
+    margin: 0px;
+}
+.titremar{
+    padding-left: 5%;
+    padding-bottom: 30px;
+}
 .heberg{
+    box-shadow: 5px 5px 5px 1px #f2f2f2;
     width: 40%;
 }
+.affplus{
+    padding-left: 5%;
+}
 
+    /* PARTIE POPULAIRE */
+
+.titrepop{
+    padding-bottom: 30px;
+    padding-left: 0px;
+    margin: 0% 5% 0% 5%;
+}
+.popu{
+    width: 100%;
+    box-shadow: 5px 5px 5px 1px #f2f2f2;
+    margin-bottom: 40px;
+    border-radius: 0;
+}
+#populaire{
+    flex-direction: column;
+    padding-left: 0px;
+    margin: none;
+    width: 100%;
+}
+.pop{
+   width: 90%;
+}
+.graph{
+    margin-right: 0px;
+}
     /* FOOTER */
 
 .baspage div{
