--- a/Assets/CSS/Mobile.css
+++ b/Assets/CSS/Mobile.css
@@ -84,7 +84,7 @@ nav li{
     /* PARTIE HEBERGEMENT */
 
 #herbegement{
-    margin: none;
+    margin: 0px;
 }
 .titremar{
     padding: 3% 0% 3% 7%;
