--- a/Assets/CSS/mobile.css
+++ b/Assets/CSS/mobile.css
@@ -82,7 +82,9 @@ nav li{
     position: unset;
 }
     /* PARTIE HEBERGEMENT */
-
+.marseille{
+    padding-left: 0px;
+}
 #herbegement{
     margin: 0px;
 }
