--- a/Assets/CSS/pc.css
+++ b/Assets/CSS/pc.css
@@ -2,7 +2,7 @@ body{
     font-family: 'Raleway', Arial, sans-serif;
     margin: 0;
 }
-header, main{
+header, .section, .section1, section {
     font-family: 'Raleway', Arial, sans-serif;
     width: auto;
     margin-left: 50px;
@@ -180,7 +180,7 @@ p{
 }
 #hebergement{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     justify-items: center;
     flex-wrap: wrap;
     margin: 20px;
@@ -288,7 +288,9 @@ p{
 }
 
     /* PARTIE ACTIVITES A MARSEILLE */
-
+.titreactivite{
+    margin: 25px 0px 25px 0px;
+}
 .active{
     display: flex;
     width: 100%;
